Added Rally-specific application level config item. Changed java.net.URI to java.net.URL for client and config. Moved task specific classes into a package.